<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ominibot_car</name>
  <version>0.0.1</version>
  <description>ominibot car driver with ROS2, hardware: 1.2, firmware: 0.08.</description>
  <maintainer email="weichih.lin@protonmail.com">Joe Lin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
