<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosky2_bringup</name>
  <version>0.0.1</version>
  <description>ROSKY2 launch file</description>
  <maintainer email="weichih.lin@protonmail.com">Joe Lin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>example_interfaces</depend>

  <!-- launch file in this package  -->
  <!--<exec_depend>package_name</exec_depend>-->
  <exec_depend>ominibot_car</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
