<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosky2_nav</name>
  <version>0.0.1</version>
  <description>ROS2 Navigation2 for ROSKY2</description>
  <maintainer email="weichih.lin@protonmail.com">Joe Lin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- launch file in this package  -->
  <!--<exec_depend>package_name</exec_depend>-->
  <exec_depend>rosky2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
